# bazel-examples

java/spring-boot/: BUILD  MODULE.bazel
java/spring-boot/rules/: java_war.bzl
java/spring-boot/src/main/resources/: application.yml
