module(
    name = "spring-boot",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_jvm_external", version = "6.5")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_spring", version = "2.6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.springframework.boot:spring-boot-starter-web:2.1.5.RELEASE",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven")